--- a/style.css
+++ b/style.css
@@ -6,6 +6,24 @@ body, html {
   'Comic Sans MS', cursive, sans-serif; 
 }
 
+#loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#loading-screen p {
+  color: white;
+  font-size: 24px;
+}
+
 #game-container {
   width: 100%;
   height: 100%;
