--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body, html {
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
-  'Comic Sans MS', cursive, sans-serif; 
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  background-color: #87CEEB; /* Sky blue background */
 }
 
 #loading-screen {
@@ -30,11 +30,15 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #87CEEB; /* Sky blue background */
+  padding: 20px;
+  box-sizing: border-box;
+    position: fixed;  
+  top: 0;           
+  left: 0;          
 }
 
 #landing-page, #quiz-container, #result-container {
-  width: 80%;
+  width: 100%;
   max-width: 600px;
   background-color: #FFFACD; /* Light yellow container */
   padding: 30px;
